--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "bootstrap": "^5.1.3",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.2"
   },
-  "devDependencies": {},
   "description": ""
 }
